<resources>
    <string name="app_name">Mantis</string>
    <string name="titulo_principal">mantis</string>
    <string name="texto_usuario">Usuario</string>
    <string name="hint_usuario">Ingrese su número de teléfono</string>
    <string name="texto_contrasena">Contraseña</string>
    <string name="hint_contrasena">Ingrese su contraseña</string>
    <string name="texto_btnIngtresar">Ingresar</string>
    <string name="texto_crear_cuenta">Crear Cuenta</string>
    <string name="titulo_crearusaurio">Creación de Usuario</string>
    <string name="texto_nombre">Nombre</string>
    <string name="hint_nombre">Ingrese su nombre</string>
    <string name="texto_apellidos">Apellidos</string>
    <string name="hint_apellidos">Ingrese sus Apellidos</string>
    <string name="texto_correo">Correo</string>
    <string name="hint_correo">Ingrese su correo electronico</string>
    <string name="texto_btnCrearUsuario">Crear Usuario</string>
    <string name="texto_repetirContrasena">Repita la contraseña</string>
    <string name="texto_telefono">Teléfono</string>
    <string name="hint_telefono">Ingrese su número de teléfono</string>
    <string name="texto_fitosanitario">Fitosanitario</string>
    <string name="texto_fumigacion">Fumigación</string>
    <string name="texto_nutricion">Nutrición</string>
    <string name="titulo_menu_principal">Menu Principal</string>
    <string name="text_usuario_form">Usuario:</string>
    <string name="text_fecha_form">Fecha:</string>
    <string name="text_producto_form">Producto:</string>
    <string name="text_variedad_form">Variedad:</string>
    <string name="titulo_ubicacion_form">Ubicación</string>
    <string name="titulo_U1">Linea</string>
    <string name="titulo_U2">Bloque</string>
    <string name="titulo_U3">Nave</string>
    <string name="titulo_U4">Cama</string>
    <string name="titulo_U5">Cuadro</string>
    <string name="btn_plagas">Plagas</string>
    <string name="texto_plaga_form">Plaga</string>
    <string name="texto_intensidad_form">Intensidad</string>
    <string name="texto_estado_form">Estado</string>
    <string name="btn_Agregar">Agregar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="texto_enfermedades">Enfermedades</string>
    <string name="btn_enviar">Enviar</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_volver">Volver</string>
    <string name="titulo_plagas_dialog">Plagas</string>
    <string name="texto_plaga">Plaga</string>
    <string name="texto_estado">Estado</string>
    <string name="texto_intensidad">Intensidad</string>
</resources>
