<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuInicioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
        android:id="@+id/cardFitosanitario"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#e6ffe6">

            <LinearLayout
                android:layout_width="142dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/fitosanitario" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/texto_fitosanitario"
                    android:textSize="20dp" />
            </LinearLayout>
    </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/cardFumigacion"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#e6ffe6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/fumigacion" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/texto_fumigacion"
                    android:textSize="20dp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/cardNutricion"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#e6ffe6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/nutricion" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/texto_nutricion"
                    android:textSize="20dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>